Fix width issue
list items with spaces we're not showing up on the same line.

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .list-item {
     cursor: pointer;
-    width: min-content;
+    width: 100%;
   }
   
   .list-item:hover {
